--- a/app/views/welcome/playing.html.erb
+++ b/app/views/welcome/playing.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="player">
         <div style="padding-left: 5px;padding-top: 5px">
-          <div id="playerCnt" style="width:948px;height:568px;"></div>
+          <div id="playerCnt" class="video_player"></div>
         </div>
       </div>
     </div>
