响应式布局开发

--- a/app/assets/stylesheets/disqus.scss
+++ b/app/assets/stylesheets/disqus.scss
@@ -2272,7 +2272,7 @@ img[data-src] {
 
 
   #form .textarea-wrapper {
-    margin-left: 10px;
+    margin-left: 0;
   }
 
   #form .textarea-wrapper .textarea .placeholder {
