--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'video_player' %>
-<%= javascript_include_tag 'video_player-4.2' %>
+<%= javascript_include_tag 'video_player' %>
 <%= content_for(:title, symbol_truncate(@video['title']) + ' | ^轩^') %>
 <div class="container">
   <div class="grid">
