--- a/app/views/layouts/just_admin_sign.html.erb
+++ b/app/views/layouts/just_admin_sign.html.erb
@@ -4,6 +4,7 @@
   <title><%= content_for?(:title) ? yield(:title) : 'Xuan | 轩' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'LTE_admin/lte_admin', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
