--- a/app/views/layouts/just_front_sign.html.erb
+++ b/app/views/layouts/just_front_sign.html.erb
@@ -4,6 +4,8 @@
   <title><%= content_for?(:title) ? yield(:title) : '用户中心 | ^轩^ ' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!-- 相应式布局 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'just_user', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'just_user', 'particles','wxLogin', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
