--- a/app/assets/themes/LTE_admin/lte_admin.css
+++ b/app/assets/themes/LTE_admin/lte_admin.css
@@ -17,4 +17,5 @@
  *=require ./plugins/timepicker/bootstrap-timepicker.css.scss
  *=require ./plugins/datatables/dataTables.bootstrap.css.scss
  *=require ./plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.css.scss
+ *=require ./plugins/jvectormap/jvectormap-2.0.3.css
  */
