网页顶部进度展示及代码轮播更新

--- a/app/views/layouts/just_admin.html.erb
+++ b/app/views/layouts/just_admin.html.erb
@@ -4,7 +4,7 @@
   <title><%= content_for?(:title) ? yield(:title) : '数据中心 | 轩' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <!-- 相应式布局 -->
+  <!-- 响应式布局 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'LTE_admin/lte_admin', 'data-turbolinks-track' => true %>
