--- a/app/views/layouts/just_front_sign.html.erb
+++ b/app/views/layouts/just_front_sign.html.erb
@@ -4,16 +4,15 @@
   <title><%= content_for?(:title) ? yield(:title) : '用户中心 | ^轩^ ' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <!-- 相应式布局 -->
+  <!-- 响应式布局 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= stylesheet_link_tag 'just_user', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'just_user', 'particles','wxLogin', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'front_user', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'user_info', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   <style type='text/css' id='hot_style_patch'>
       .main-wechat{ padding-top: 45px !important}
       .done, .alert { position: static !important}
-
   </style>
 </head>
 <body class="sessions-new ">
@@ -51,3 +50,7 @@
 </section>
 </body>
 </html>
+<script>
+    $(document).on('page:fetch',   function() { NProgress.start(); });
+    $(document).on('page:change',  function() { NProgress.done(); });
+</script>
