--- a/app/views/administer/columns/edit.html.erb
+++ b/app/views/administer/columns/edit.html.erb
@@ -22,3 +22,11 @@
     </div>
   </div>
 </section>
+<script>
+    window.onbeforeunload = function(e)//绑定刷新等事件
+    {
+        var message = '^_^频道栏目信息请确认完善！'//设定提示消息
+        if ('Netscape' == navigator.appName) return e.preventDefault(),message//针对Netscape内核的提示方式,阻止默认动作 後返回提示消息即可
+        window.event.returnValue = message//针对IE等的提示方式
+    }
+</script>
