--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -44,8 +44,13 @@
       <% if current_user %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <img src="<%= display_avatar current_user%>" height="18px" class="img-circle">&nbsp;&nbsp;
-              <%= display_name current_user %>
+              <span class="ipad_avatar">
+                <img src="<%= display_avatar current_user%>" height="18px" class="img-circle">&nbsp;&nbsp;
+                <%= display_name current_user %>
+              </span>
+              <span class="iphone_avatar">
+                <img src="<%= display_avatar current_user%>" height="24px">&nbsp;&nbsp;
+              </span>
             </a>
             <ul class="dropdown-menu" role="menu">
               <% if current_user.role == 'admin' %>
