--- a/app/views/administer/videos/_form.html.erb
+++ b/app/views/administer/videos/_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_for(['administer',@column, @video]) do |f| %>
-    <div class="box-body" style="padding-left: 100px;background: url(<%= image_path('avatar/form_background.png')%>)">
-
-      <div class="form-group has-feedback">
+    <div class="box-body" style="padding-left: 100px">
+      <div class="form-group has-warning">
         <label>频道归属</label>
         <div class="input-group" style="width: 300px">
           <div class="input-group-addon">
@@ -10,8 +9,16 @@
           <input type="text" value="<%= @column.name %>" class="form-control" readonly>
         </div>
       </div>
-
       <div class="form-group has-success">
+        <label>视频推荐</label>
+        <div class="input-group" style="width: 300px">
+          <div class="input-group-addon">
+            <i class="glyphicon glyphicon-fire"></i>
+          </div>
+          <%= f.select(:recommend, [['默认否',0],['选择是',1]], {},{:class => 'form-control'}) %>
+        </div>
+      </div>
+      <div class="form-group has-error">
         <label>封面文件</label>
         <div class="input-group" style="width: 300px">
           <div class="input-group-addon">
@@ -26,17 +33,6 @@
             <img id="imgedit" src="<%= @video.cover %>" style="max-width: 300px;padding-top: 10px"/>
         <% end %>
       </div>
-
-      <div class="form-group has-warning">
-        <label>视频推荐</label>
-        <div class="input-group" style="width: 300px">
-          <div class="input-group-addon">
-            <i class="glyphicon glyphicon-fire"></i>
-          </div>
-          <%= f.select(:recommend, [['默认否',0],['选择是',1]], {},{:class => 'form-control'}) %>
-        </div>
-      </div>
-
       <div class="form-group has-error">
         <label>类别属性</label>
         <div class="input-group" style="width: 300px">
@@ -48,49 +44,40 @@
           <% else %>
               <%= f.select(:video_type, [['优酷视频',0],['腾讯视频',1],['爱奇艺视频',2]], {prompt:'请选择类型'},{:class => 'form-control'}) %>
           <% end %>
-
         </div>
       </div>
-      <div class="form-group has-warning">
+      <div class="form-group has-feedback">
+        <label>视频时长</label>
+        <div class="input-group" style="width: 300px">
+          <div class="input-group-addon">
+            <i class="glyphicon glyphicon-time"></i>
+          </div>
+          <%= f.text_field :duration, :class => 'form-control', placeholder:'(选填)* ' %>
+        </div>
+      </div>
+      <div class="form-group has-error">
         <label>视频标题</label>
-        <div class="input-group" style="width: 600px">
+        <div class="input-group" style="width: 450px">
           <div class="input-group-addon">
             <i class="glyphicon glyphicon-bookmark"></i>
           </div>
           <%= f.text_field :title, class:'form-control', placeholder:'(必填*)' %>
         </div>
       </div>
-      <% if @column.english == 'Fucking' %>
-          <div class="form-group has-success">
-            <label>电影时长</label>
-            <div class="input-group" style="width: 600px">
-              <div class="input-group-addon">
-                <i class="glyphicon glyphicon-time"></i>
-              </div>
-              <%= f.text_field :duration, :class => 'form-control', placeholder:'(必填)* ' %>
-            </div>
-          </div>
-          <div class="form-group has-error">
+      <div class="form-group has-error">
+        <% if @column.english == 'Fucking' %>
             <label>资源链接</label>
-            <div class="input-group" style="width: 600px">
-              <div class="input-group-addon">
-                <i class="glyphicon glyphicon-info-sign"></i>
-              </div>
-              <%= f.text_field :tv_code, :class => 'form-control', placeholder:'(必填)* ' %>
-            </div>
-          </div>
-      <% else %>
-          <div class="form-group has-error">
+        <% else %>
             <label>视频编号</label>
-            <div class="input-group" style="width: 600px">
-              <div class="input-group-addon">
-                <i class="glyphicon glyphicon-info-sign"></i>
-              </div>
-              <%= f.text_field :tv_code, :class => 'form-control', placeholder:'(必填)* ' %>
-            </div>
+        <% end %>
+        <div class="input-group" style="width: 450px">
+          <div class="input-group-addon">
+            <i class="glyphicon glyphicon-info-sign"></i>
           </div>
-      <% end %>
-      <div class="form-group has-warning">
+          <%= f.text_field :tv_code, :class => 'form-control', placeholder:'(必填)* ' %>
+        </div>
+      </div>
+      <div class="form-group has-success">
         <label>封面链接</label>
         <div class="input-group" style="width: 600px">
           <div class="input-group-addon">
@@ -99,12 +86,14 @@
           <%= f.text_field :cover, class:'form-control', placeholder:'(选填)*' %>
         </div>
       </div>
-      <div class="form-group has-feedback">
-        <label>视频简介</label>
-        <div class="input-group"style="width: 600px">
-          <%= f.text_area :summary, class:'textarea', placeholder:'Place some text here', style:'width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;' %>
-        </div>
-      </div>
+      <% if action_name == 'edit' %>
+          <div class="form-group has-feedback">
+            <label>视频简介</label>
+            <div class="input-group"style="width: 600px">
+              <%= f.text_area :summary, class:'textarea', placeholder:'Place some text here', style:'width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;' %>
+            </div>
+          </div>
+      <% end %>
       <hr>
       <div>
         <button type="submit" class="btn btn-primary" style="width: 120px">提交</button>
@@ -112,7 +101,6 @@
       </div>
     </div>
 <% end %>
-
 <script type="text/javascript">
     $(function () {
         $(".textarea").wysihtml5();
