--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="video">
       <ul class="video-list">
-        <% cache [:index, @videos.map{|c| c['updated_at']}.max] do%>
+        <% cache [:index, @videos.total_entries,@videos.map{|c| c['updated_at']}.max] do%>
             <%= render :partial=> 'shared/more_videos', locals: {videos:@videos} %>
         <% end %>
       </ul>
