--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -29,7 +29,15 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-          <i class="fa fa-diamond"></i>&nbsp;<span>栏目</span>
+          <% if params[:english].present? %>
+            <% column = Column.find_by_english(params[:english]) %>
+            <i class="<%= column.icon %>"></i>&nbsp;<span><%= column.name %></span>
+          <% elsif params[:tv_code].present? %>
+              <% column = Column.find(@video.column_id) %>
+              <i class="<%= column.icon %>"></i>&nbsp;<span><%= column.name %></span>
+          <% else %>
+              <i class="fa fa-diamond"></i>&nbsp;<span>栏目</span>
+          <% end %>
         </a>
         <ul class="dropdown-menu" role="menu">
           <% Column.hexie.each do |channel|%>
