更改标签文案显示

--- a/app/views/administer/columns/import_videos.html.erb
+++ b/app/views/administer/columns/import_videos.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  ' 栏目视频导入 | 轩') %>
+<%= content_for(:title,  ' 栏目视频导入 | 车干') %>
 <section class="content-header">
   <h1>
     导入视频
