--- a/app/views/administer/columns/index.html.erb
+++ b/app/views/administer/columns/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '栏目列表 | 轩') %>
+<%= content_for(:title,  '栏目列表 | 车干') %>
 <section class="content-header">
   <h1>
     视频栏目 <small>栏目信息预览</small>
