--- a/app/views/administer/columns/new.html.erb
+++ b/app/views/administer/columns/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '添加栏目 | 轩') %>
+<%= content_for(:title,  '添加栏目 | 车干') %>
 <section class="content-header">
   <h1>
     添加栏目
