--- a/app/views/administer/dashboard/channel.html.erb
+++ b/app/views/administer/dashboard/channel.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, @column.name + ' | 轩') %>
+<%= content_for(:title, @column.name + ' | 车干') %>
 <section class="content-header">
   <h1>
     「<%= @column.name %>」
