--- a/app/views/administer/dashboard/users.html.erb
+++ b/app/views/administer/dashboard/users.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '用户列表 | 轩') %>
+<%= content_for(:title,  '用户列表 | 车干') %>
 <section class="content-header">
   <h1>
     用户列表 <small>注册信息预览</small>
