--- a/app/views/administer/seven_cattle/edit.html.erb
+++ b/app/views/administer/seven_cattle/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '编辑文件 | 轩') %>
+<%= content_for(:title,  '编辑文件 | 车干') %>
 <section class="content-header">
   <h1>
     文件云存储 <small>编辑文件</small>
