--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '修改密码 | ^轩^') %>
+<%= content_for(:title,  '修改密码 | 车干') %>
 <div class="main">
   <div class="main-login">
     <% if devise_error_messages!.present? %>
