--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, symbol_truncate(@video['title']) + ' | ^轩^') %>
+<%= content_for(:title, symbol_truncate(@video['title']) + ' | 车干') %>
 <div class="container">
   <div class="grid">
     <div class="display">
