--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '忘记密码 | ^轩^') %>
+<%= content_for(:title,  '忘记密码 | 车干') %>
 <%=javascript_include_tag 'http://api.geetest.com/get.php' %>
 <div class="main">
   <div class="main-login">
