--- a/app/views/welcome/playing.html.erb
+++ b/app/views/welcome/playing.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, @video.title + ' | ^轩^') %>
+<%= content_for(:title, @video.title + ' | 车干') %>
 <%= render partial: 'shared/og_meta', video:@video %>
 <div class="container">
   <div class="grid">
